# tvc-hopper

./: .gitignore  .project  CMakeLists.txt  Makefile  Pipfile  README.md
bsp/: CMakeLists.txt
bsp/flight-controller/: CMakeLists.txt  flight-controller.mex
bsp/flight-controller/include/bsp/: peripherals.h  pin_mux.h
bsp/flight-controller/src/: peripherals.c  pin_mux.c
bsp/mimxrt1010-evk/: CMakeLists.txt  MIMXRT1010-EVK.mex
bsp/mimxrt1010-evk/include/bsp/: clock_config.h  peripherals.h  pin_mux.h
bsp/mimxrt1010-evk/src/: clock_config.c  peripherals.c  pin_mux.c
circbuf/: CMakeLists.txt
circbuf/include/circbuf/: cbuf.h
circbuf/src/: cbuf.c
cmake/: flags.cmake  toolchain-arm-none-eabi.cmake
drivers/: CMakeLists.txt
drivers/ArduinoTestSketches/IMU/: IMUverification.ino  imu.c  imu.h
drivers/ArduinoTestSketches/SERVOS/: servo.c  servo.h  servo.ino
drivers/include/drivers/: bno085_i2c.h  esc.h  imu.h  servo.h  tfl_i2c.h
drivers/src/: bno085_i2c.c  esc.c  imu.c  servo.c  tfl_i2c.c
freertos/: CMakeLists.txt
freertos/freertos_kernel/: tasks.c
freertos/freertos_kernel/include/freertos/: portable.h
fslhal/: CMakeLists.txt
fslhal/include/fslhal/: fsl_common_arm.h
fslhal/src/: fsl_lpi2c_freertos.c
sensor-hub/: CMakeLists.txt
sensor-hub/include/sh2/: sh2_hal.h
simulink/: README.md  compute_linear_controller.m  nonlinear_function_call.m  nonlinear_simulation.slx  nonlinear_simulation_codegen.slx  pitch_3dof.slx
slprj/_jitprj/: jitEngineAccessInfo.mat  sczMy6XEqRf1MLgm5djAnPC.l  sczMy6XEqRf1MLgm5djAnPC.mat
slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  sczMy6XEqRf1MLgm5djAnPC.mat
slprj/_sfprj/precompile/: afcCzyaGer9dwiNw6D8h8.mat  autoInferAccessInfo.mat
spp/: CMakeLists.txt  README.md
spp/include/common/: spp_proto_def.h
spp/include/sppclient/: api.h  defs.h
spp/include/spphost/: api.h  defs.h
spp/src-client/: spp.c
spp/src-host/: spp.c
src/: FreeRTOSConfig.h  app_hal_xconnect.c  app_hal_xconnect.h  main.c  spp_property_list.c  spp_property_list.h
src/hw/: batt_monitor.c  batt_monitor.h  esc.c  esc.h  hw.c  hw.h  imu.c  imu.h  lidar.c  lidar.h  thrust_vanes.c  thrust_vanes.h
src/modules/: command_control_comms.c  command_control_comms.h  control_inputs.c  control_inputs.h  controls_inputs.h  lqr_control.c  lqr_control.h  spp_property_list.c  spp_property_list.h
stcp/: CMakeLists.txt
stcp/include/stcp/: stcp.h
stcp/src/: CMakeLists.txt  stcp.c
support/: prop_list.toml
support/tvc_ide_build/: .cproject  .project  tvc_debug.launch
tests/: CMakeLists.txt
tests/assorted/: i2c_read.py
tests/circbuf/: test_cbuf.cpp
tests/drivers/: test_esc.cpp  test_imu.cpp  test_servo.cpp
tests/spp/: test_spp.cpp  test_spp_client.cpp  test_tvc.cpp
tests/stcp/: test_stcp.cpp
tools/: generate_spp_lists.py
tools/Matlab/: nonlinear_simulation1.slxc
tools/Matlab/Updated Simulation (with our physical parameters)/: QR_matrices.m  compute_linear_controller.m  lbinchTokgm.m  nonlinear_dynamics.m  nonlinear_simulation.slx  nonlinear_simulation.slx.autosave  nonlinear_simulation.slx.original  nonlinear_simulation.slxc  nonlinear_simulation1.slx  nonlinear_simulation1.slx.autosave  nonlinear_simulation1.slx.r2021a  nonlinear_simulation1.slxc
tools/Matlab/Updated Simulation (with our physical parameters)/slprj/_jitprj/: jitEngineAccessInfo.mat  sGjLYWQMGd9yh1sbeuuQxn.l  sGjLYWQMGd9yh1sbeuuQxn.mat  sVJWdkGsNEILP4wamMdH67E.l  sVJWdkGsNEILP4wamMdH67E.mat  sWKRkdP2ouPZ0ITQ5vZQ9EE.l  sWKRkdP2ouPZ0ITQ5vZQ9EE.mat
tools/Matlab/Updated Simulation (with our physical parameters)/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  sGjLYWQMGd9yh1sbeuuQxn.mat  sVJWdkGsNEILP4wamMdH67E.mat  sWKRkdP2ouPZ0ITQ5vZQ9EE.mat
tools/Matlab/Updated Simulation (with our physical parameters)/slprj/_sfprj/nonlinear_simulation/: amsi_serial.mat
tools/Matlab/Updated Simulation (with our physical parameters)/slprj/_sfprj/nonlinear_simulation/_self/sfun/info/: binfo.mat
tools/Matlab/Updated Simulation (with our physical parameters)/slprj/_sfprj/precompile/: BIr5LMmMJ91QUsUN6AkS7F.mat  Lc8pizOWEIaN52WjH5wuoB.mat  autoInferAccessInfo.mat  ftFzQFc7jHjRadJs2cFbkB.mat
tools/Matlab/Updated Simulation (with our physical parameters)/slprj/sim/varcache/nonlinear_simulation/: checksumOfCache.mat  varInfo.mat
tools/Matlab/Updated Simulation (with our physical parameters)/slprj/sim/varcache/nonlinear_simulation/tmwinternal/: simulink_cache.xml
tools/Matlab/Vehicle Physical Parameter Scripts/: calcInertia.m
tools/tcp_server_client-master/: CMakeLists.txt
tools/tcp_server_client-master/include/: client.h  client_observer.h  server_observer.h  tcp_client.h  tcp_server.h
tools/tcp_server_client-master/src/: client.cpp  tcp_client.cpp  tcp_server.cpp
tools/telemetry_emulator/: CMakeLists.txt
tools/telemetry_emulator/src/: main.cpp  spp_property_list.c  spp_property_list.h
tools/telemetry_viewer/: CMakeLists.txt  TelemetryApp.m  TelemetryPlotter.m  TelemetryViewerClient.m  baseGui.m  compute_linear_controller.m  connect_test.m  getProperty.m  getStateSpaceRep.m  guiDev2.m  imu_read.m  launchVehicleComms.m  lidar_read.m  lqrGui.m  main.cpp  propertyEntry.m  propertyGui.m  propertyLaunchGui.m  propertyList.m  propertyState.m  start_vehicle_comms.m  telemetry_plot.m  unpackTelemetry.m
tools/telemetry_viewer/GuiFinal/: TelemetryApp.m  baseGui.m  calculateCM.m  compute_linear_controller.m  guiDev2.m  propertyEntry.m  propertyGui.m  propertyLaunchGui.m  propertyList.m  propertyState.m
tools/telemetry_viewer/include/telemetry/: rs232.h  spp_property_list.h  telemetry_comms.h
tools/telemetry_viewer/src/: rs232.c  telemetry_comms.cpp
tools/telemetry_viewer/test scripts/: lidar_read.m  setProperty.m
